test/ui/tests/unrecognized-intrinsic-function.stderr
error[E021]: binding `I-Definitely-Do-Not-Exist` is not defined in this scope
 --> ${TEST_FOLDER}/unrecognized-intrinsic-function.lushui:6:28
  |
6 | i-definitely-do-not-exist: I-Definitely-Do-Not-Exist
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
 help: a binding with a similar name exists in scope: `i-definitely-do-not-exist` (Ii-Ddefinitely-Ddo-Nnot-Eexist)

error: aborting due to previous error

