test/ui/tests/unrecognized-intrinsic-function.lushui
;;; TEST fail check -Z internals
;;; @Note it used to be the case that we could report unrecognized intrinsic types *and* functions together in one module
;;; but we moved the registration of intrinsic types from the typer to the resolver

@intrinsic
i-definitely-do-not-exist: I-Definitely-Do-Not-Exist
